@@ -1077,13 +1077,14 @@ HOURSINDAY=6
 # DAYSINMONTH - Days In A MudMonth.  Counts from 1 to this.
 # This field is for the default clock only.
 # Default is 20
-DAYSINMONTH=20
+DAYSINMONTH=24
 
 # MONTHSLIST - Names of the months in a year, from first to last
 # This list is comma delimited, and may be words, numbers, whatever.
 # This field is for the default clock only.
+# Default is 7 months.
 MONTHSINYEAR=the 1st month,the 2nd month,the 3rd month,the 4th month,\
-			 the 5th month,the 6th month,the 7th month,the 8th month
+			 the 5th month,the 6th month,the 7th month
 
 # DAYSINWEEK - Names of the days in a week, from first to last.
 # This list is comma delimited, and may be words, numbers, whatever.
